UI changes and some code refactoring

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fleet Dashboard</title>
+  <title>Fleet Dashboard Login</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -19,15 +21,37 @@
     }
 
     main {
-      padding: 1rem 2rem;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
-    h2 {
-      color: #2d3748;
+    .login-form,
+    .dashboard {
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      margin-bottom: 1rem;
     }
 
-    section {
-      margin-bottom: 2rem;
+    .login-form {
+      max-width: 400px;
+    }
+
+    .dashboard {
+      max-width: 1000px;
+    }
+
+    input,
+    select {
+      width: 100%;
+      padding: 0.6rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
     }
 
     button {
@@ -37,12 +61,22 @@
       padding: 0.6rem 1rem;
       border-radius: 8px;
       cursor: pointer;
-      margin-right: 0.5rem;
-      font-size: 0.9rem;
+      font-size: 1rem;
+      margin-top: 1rem;
     }
 
     button:hover {
       background: #2c5282;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    #tripResult {
+      overflow-x: auto;
+      width: 100%;
+      margin-top: 1rem;
     }
 
     table {
@@ -56,161 +90,301 @@
       border: 1px solid #ccc;
       padding: 0.6rem;
       text-align: left;
+      white-space: nowrap;
     }
 
     th {
       background-color: #e2e8f0;
     }
 
-    select {
-      padding: 0.4rem;
-      border-radius: 4px;
-      margin-left: 0.5rem;
+    .summary {
+      margin-top: 1rem;
+      background-color: #edf2f7;
+      padding: 1rem;
+      border-radius: 6px;
+      font-weight: bold;
+      font-size: 1rem;
+      text-align: center;
     }
 
-    #tableResult {
-      overflow-x: auto;
+    .dashboard-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    h3 {
-      margin-top: 1.5rem;
+    #mapScreen {
+      position: relative;
+      height: 400px;
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    #tripDetails {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      background-color: #e6f0ff;
+      border: 1px solid #cce0ff;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      z-index: 1000;
+      max-width: 300px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>🚗 Fleet Tracker Dashboard</h1>
+    <h1>Accurate Damoov</h1>
   </header>
-
   <main>
-    <!-- Trips Section -->
-    <section>
-    <h2>Trips 📍</h2>
-    <button onclick="fetchAllTrips()">Show All Trips</button>
-    <div id="tripResult"></div>
-   </section>
+    <!-- 🔐 Login Form -->
+    <div class="login-form" id="loginForm">
+      <h2>Login</h2>
+      <input type="text" id="username" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button onclick="login()">Login</button>
+      <p id="loginError" style="color: red;"></p>
+    </div>
 
-    <!-- Tables Section -->
-    <section>
-      <h2>Tables 📊</h2>
-      <label for="tableSelect">Select Table:</label>
-      <select id="tableSelect" onchange="fetchTableData()">
-        <option value="TrackTable">TrackTable</option>
-        <option value="LastKnownPointTable">LastKnownPointTable</option>
-        <option value="EventsTable">EventsTable</option>
-        <option value="EventsStartPointTable">EventsStartPointTable</option>
-        <option value="EventsStopPointTable">EventsStopPointTable</option>
-        <option value="RangeDirectTable">RangeDirectTable</option>
-        <option value="RangeLateralTable">RangeLateralTable</option>
-        <option value="RangeVerticalTable">RangeVerticalTable</option>
-        <option value="RangeAccuracyTable">RangeAccuracyTable</option>
-        <option value="RangeSpeedTable">RangeSpeedTable</option>
-        <option value="devices">devices</option>
-        <option value="users">users</option>
-      </select>
-      <div id="tableResult"></div>
-    </section>
+    <!-- 🗺️ Map View with Details Overlay -->
+    <div id="mapScreen" class="hidden">
+      <div id="tripDetails" class="hidden"></div>
+    </div>
+
+    <!-- 📊 Dashboard -->
+    <div class="dashboard hidden" id="dashboard">
+      <div class="dashboard-header">
+        <h2>Welcome to the Dashboard</h2>
+        <button onclick="logout()">Logout</button>
+      </div>
+      <button onclick="toggleTripTable()" id="tripToggleBtn">Show All Trips</button>
+      <div id="userSummary" class="summary hidden"></div>
+      <div id="tripResult" class="hidden"></div>
+    </div>
   </main>
 
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    async function fetchAllTrips() {
-      const res = await fetch('/triprecords');
-      const data = await res.json();
-      displayTrips(data.data);
-    }
+    let tripTableVisible = false;
+    let allTrips = [];
 
-    async function fetchTripsByDevice() {
-      const deviceId = document.getElementById("deviceSelect").value;
-      if (!deviceId) return;
-      const res = await fetch(`/triprecordfordevice?device_id=${deviceId}`);
-      const data = await res.json();
-      displayTrips(data.data);
-    }
+    async function login() {
+      const email = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value.trim();
+      const errorText = document.getElementById("loginError");
 
-    function displayTrips(trips) {
-      const container = document.getElementById("tripResult");
-      if (!trips || trips.length === 0) {
-        container.innerHTML = "<p>No trips found.</p>";
+      if (!email || !password) {
+        errorText.textContent = "Please enter both email and password.";
         return;
       }
 
-      let html = "<table><tr><th>UNIQUE_ID</th><th>Device</th><th>Start</th><th>Start Lat</th><th>Start Lng</th><th>End Lat</th><th>End Lng</th><th>Distance (km)</th></tr>";
-
-      trips.forEach(trip => {
-        html += `<tr>
-          <td>${trip.UNIQUE_ID}</td>
-          <td>${trip.device_name}</td>
-          <td>${trip.start_date}</td>
-          <td>${trip.start_latitude}</td>
-          <td>${trip.start_longitude}</td>
-          <td>${trip.end_latitude}</td>
-          <td>${trip.end_longitude}</td>
-          <td>${trip.distance_km?.toFixed(2) ?? "0.00"}</td>
-        </tr>`;
-      });
-
-      html += "</table>";
-      container.innerHTML = html;
-    }
-
-    async function loadDevices() {
-      const res = await fetch('/api/devices');
-      const data = await res.json();
-      const select = document.getElementById("deviceSelect");
-
-      // Clear existing
-      select.innerHTML = "";
-
-      data.data.forEach(device => {
-        const opt = document.createElement("option");
-        opt.value = device.device_id;
-        opt.innerText = device.device_name || device.device_id;
-        select.appendChild(opt);
-      });
-
-      if (select.options.length > 0) {
-        select.selectedIndex = 0;
-        fetchTripsByDevice(); // Load trips for first device
-      }
-    }
-
-    async function fetchTableData() {
-      const tableName = document.getElementById("tableSelect").value;
-      const res = await fetch(`/api/${tableName}`);
-      const data = await res.json();
-      displayTable(tableName, data.data || data);
-    }
-
-    function displayTable(name, rows) {
-      const container = document.getElementById("tableResult");
-
-      if (!rows || rows.length === 0) {
-        container.innerHTML = `<p>No data found for ${name}.</p>`;
-        return;
-      }
-
-      const columns = Object.keys(rows[0]);
-
-      let html = `<h3>${name}</h3><div style="overflow-x:auto"><table><thead><tr>`;
-      columns.forEach(col => html += `<th>${col}</th>`);
-      html += "</tr></thead><tbody>";
-
-      rows.forEach(row => {
-        html += "<tr>";
-        columns.forEach(col => {
-          html += `<td>${row[col] != null ? row[col] : ""}</td>`;
+      try {
+        const res = await fetch('/api/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
         });
-        html += "</tr>";
+
+        const result = await res.json();
+
+        if (res.ok && result.success) {
+          localStorage.setItem("user_id", result.user_id);
+          localStorage.setItem("user_name", result.name);
+          showDashboard();
+        } else {
+          errorText.textContent = result.message || "Login failed.";
+        }
+      } catch (err) {
+        errorText.textContent = "Network or server error.";
+      }
+    }
+
+    function logout() {
+      localStorage.clear();
+      location.reload();
+    }
+
+    async function showDashboard() {
+      document.getElementById("loginForm").classList.add("hidden");
+      document.getElementById("dashboard").classList.remove("hidden");
+
+      try {
+        await fetchAllTrips();
+      } catch (err) {
+        alert("Session expired or server error. Please login again.");
+        logout();
+      }
+    }
+
+    async function fetchAllTrips() {
+      const user_id = localStorage.getItem("user_id");
+      if (!user_id) throw new Error("Missing user_id");
+
+      const res = await fetch(`/triprecordsForUser?user_id=${user_id}`);
+      const data = await res.json();
+
+      if (!res.ok || !data.success) throw new Error("Failed to load trips");
+
+      allTrips = data.data || [];
+      displayTrips();
+    }
+
+    function toggleTripTable() {
+      tripTableVisible = !tripTableVisible;
+      const table = document.getElementById("tripResult");
+      const summary = document.getElementById("userSummary");
+      const btn = document.getElementById("tripToggleBtn");
+      const mapDiv = document.getElementById("mapScreen");
+      const detailsDiv = document.getElementById("tripDetails");
+
+      if (tripTableVisible) {
+        fetchAllTrips();
+        table.classList.remove("hidden");
+        summary.classList.remove("hidden");
+        btn.textContent = "Hide Trips";
+      } else {
+        table.classList.add("hidden");
+        summary.classList.add("hidden");
+        btn.textContent = "Show All Trips";
+
+        mapDiv.classList.add("hidden");
+        detailsDiv.classList.add("hidden");
+
+        if (window.tripMap) {
+          window.tripMap.eachLayer(layer => {
+            if (layer instanceof L.Polyline || layer instanceof L.Marker) {
+              window.tripMap.removeLayer(layer);
+            }
+          });
+        }
+      }
+    }
+
+    function formatDate(dateStr) {
+      const date = new Date(dateStr);
+      const day = String(date.getDate()).padStart(2, '0');
+      const month = String(date.getMonth() + 1).padStart(2, '0');
+      const year = String(date.getFullYear()).slice(2);
+      return `${day}-${month}-${year}`;
+    }
+
+    function displayTrips() {
+      const container = document.getElementById("tripResult");
+      const summary = document.getElementById("userSummary");
+      const userName = localStorage.getItem("user_name") || "User";
+
+      if (!allTrips.length) {
+        container.innerHTML = "<p>No trips found.</p>";
+        summary.innerHTML = `Driver: <strong>${userName}</strong> | Trips: <strong>0</strong> | Total Distance: <strong>0.00 km</strong>`;
+        return;
+      }
+
+      const totalDistance = allTrips.reduce((sum, t) => sum + (parseFloat(t.distance_km) || 0), 0);
+      summary.innerHTML = `Driver: <strong>${userName}</strong> | Trips: <strong>${allTrips.length}</strong> | Total Distance: <strong>${totalDistance.toFixed(2)} km</strong>`;
+
+      let html = `
+        <table>
+          <thead>
+            <tr>
+              <th>UNIQUE_ID</th>
+              <th>Device</th>
+              <th>Start</th>
+              <th>Start Lat</th>
+              <th>Start Lng</th>
+              <th>End Lat</th>
+              <th>End Lng</th>
+              <th>Distance (km)</th>
+            </tr>
+          </thead>
+          <tbody>
+      `;
+
+      allTrips.forEach(trip => {
+        html += `
+          <tr onclick="loadTripPath('${trip.UNIQUE_ID}')">
+            <td>${trip.UNIQUE_ID ?? "-"}</td>
+            <td>${trip.device_name ?? "-"}</td>
+            <td>${trip.start_date ? formatDate(trip.start_date) : "-"}</td>
+            <td>${trip.start_latitude ?? "-"}</td>
+            <td>${trip.start_longitude ?? "-"}</td>
+            <td>${trip.end_latitude ?? "-"}</td>
+            <td>${trip.end_longitude ?? "-"}</td>
+            <td>${trip.distance_km?.toFixed(2) ?? "0.00"}</td>
+          </tr>
+        `;
       });
 
-      html += "</tbody></table></div>";
+      html += "</tbody></table>";
       container.innerHTML = html;
     }
 
-    window.onload = () => {
-      loadDevices();
-      fetchTableData(); // Load initial table
-    };
+    async function loadTripPath(uniqueId) {
+      const userId = localStorage.getItem("user_id");
+      const mapDiv = document.getElementById("mapScreen");
+      const detailsDiv = document.getElementById("tripDetails");
+
+      mapDiv.classList.remove("hidden");
+      detailsDiv.classList.remove("hidden");
+
+      setTimeout(() => {
+        mapDiv.scrollIntoView({ behavior: "smooth", block: "start" });
+      }, 200);
+
+      try {
+        const response = await fetch(`/geopoints?unique_id=${uniqueId}&user_id=${userId}`);
+        const data = await response.json();
+
+        if (!data.success || !data.data || data.data.length === 0) {
+          alert("No path data available for this trip.");
+          return;
+        }
+
+        const trip = allTrips.find(t => t.UNIQUE_ID === uniqueId);
+        const coordinates = data.data.map(point => [point.latitude, point.longitude]);
+        const startDate = trip?.start_date ? formatDate(trip.start_date) : "-";
+        const distance = trip?.distance_km?.toFixed(2) ?? "0.00";
+
+        detailsDiv.innerHTML = `
+          Trip: <strong>${uniqueId}</strong><br />
+          Date: <strong>${startDate}</strong><br />
+          Distance: <strong>${distance} km</strong>
+        `;
+
+        if (!window.tripMap) {
+          window.tripMap = L.map("mapScreen").setView(coordinates[0], 13);
+          L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+            attribution: "© OpenStreetMap",
+          }).addTo(window.tripMap);
+        } else {
+          window.tripMap.setView(coordinates[0], 13);
+          window.tripMap.eachLayer(layer => {
+            if (layer instanceof L.Polyline || layer instanceof L.Marker) {
+              window.tripMap.removeLayer(layer);
+            }
+          });
+        }
+
+        L.marker(coordinates[0]).addTo(window.tripMap).bindPopup("Start").openPopup();
+        L.marker(coordinates[coordinates.length - 1]).addTo(window.tripMap).bindPopup("End");
+        L.polyline(coordinates, { color: "blue", weight: 4 }).addTo(window.tripMap);
+
+      } catch (err) {
+        console.error("Error loading trip path:", err);
+        alert("Error fetching trip path.");
+      }
+    }
+
+    // 🧠 Auto-login on page load
+    window.addEventListener("DOMContentLoaded", () => {
+      const userId = localStorage.getItem("user_id");
+      const userName = localStorage.getItem("user_name");
+
+      if (userId && userName) {
+        showDashboard();
+      }
+    });
   </script>
 </body>
 </html>
